# Statistical-Data-Analysis

./: .gitignore  LICENSE  README.md  best_model_selection.ipynb  data_analysis.ipynb  feature_selection.ipynb  model_selection.ipynb  pyproject.toml
utils/: pipelines.py
