[project]
name = "Body-performance-analysis"
version = "0.1.0"
description = "Fully completed Statistical Data Analysis based on 'Body performance analysis' dataset."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "pandas-stubs~=2.3.3",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
]

