[project]
name = "Body-performance-analysis"
version = "0.1.0"
description = "Fully completed Statistical Data Analysis based on 'Body performance analysis' dataset."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmlapi>=0.1.2",
    "ipykernel>=7.1.0",
    "jinja2>=3.1.6",
    "matplotlib>=3.10.8",
    "optuna>=4.6.0",
    "pandas>=2.3.3",
    "pandas-stubs~=2.3.3",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
    "xgboost>=3.1.3",
]

